<resources>
    <string name="app_name">Kandroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="login_success">登录成功</string>
    <string name="code">验证码</string>
    <string name="register_success">注册成功</string>
    <string name="sendCode">发送验证码</string>
    <string name="codeSuccess">验证码发送成功</string>
    <string name="title_activity_coupon_list">CouponListActivity</string>
</resources>
