<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cn.gc.kandroid.view.RegisterActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="1"
            android:id="@+id/edit_phone_register"
            android:inputType="phone"
            android:hint="@string/phone"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_send_code"
            android:text="@string/sendCode"
            android:onClick="toSendCode"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_code_register"
        android:inputType="number"
        android:hint="@string/code"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_pwd_register"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:onClick="toRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
