<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cn.gc.kandroid.view.LoginActivity">

    <EditText
        android:id="@+id/edit_phone"
        android:inputType="phone"
        android:singleLine="true"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:singleLine="true"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
